[package]
name = "csv_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
rusty-money = { version = "0.4.1", features = ["iso"] }
